[fix: statusbar z-index]
	issue:
		the first dropdown menu entries in the each of the navbar menus
		is hard to click

	reason:
		the statusbar has a higher z-index than the dropdown menus,
		hence it gets the statusbar gets mouse over

	fix:
		adjust the statusbar z-index dynamically

--- a/css/mantis-elements.css
+++ b/css/mantis-elements.css
@@ -31,7 +31,6 @@
 	height: 25px;
 	margin: 2px 0 2px 0 !important;
 	width: 100%;
-	z-index: 5001;
 }
 
 p.statusbar{
